welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
      while ( ! isFacingTrail()) {
                             ^SlugSnail:18: error: value c is not a member of object java.awt.Color
    if (getCouleurSol() == Color.c) {vert = true}
                                 ^